[gd_scene load_steps=2 format=3 uid="uid://pausemenu"]

[ext_resource type="Script" path="res://shared/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1")

[node name="PauseOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.7)
visible = false

[node name="PausePanel" type="Panel" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="VBox" type="VBoxContainer" parent="PauseOverlay/PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PauseLabel" type="Label" parent="PauseOverlay/PausePanel/VBox"]
layout_mode = 2
text = "⏸️ PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseOverlay/PausePanel/VBox"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseOverlay/PausePanel/VBox"]
layout_mode = 2
text = "Restart"

[node name="SettingsButton" type="Button" parent="PauseOverlay/PausePanel/VBox"]
layout_mode = 2
text = "Settings"

[node name="MenuButton" type="Button" parent="PauseOverlay/PausePanel/VBox"]
layout_mode = 2
text = "Main Menu"